plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'CloudBalance Backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()

    // ✅ Snowflake Maven repo
    maven {
        url "https://repo.snowflake.com/maven/"
    }
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JWT (JJWT)
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Security
    implementation 'org.springframework.security:spring-security-crypto'

    // CSV Processing
    implementation 'org.apache.commons:commons-csv:1.10.0'

    // Database
    runtimeOnly 'com.mysql:mysql-connector-j:8.3.0'

    // ✅ Snowflake JDBC + Snowpark
    implementation 'net.snowflake:snowflake-jdbc:3.19.1' // ✅ stable version
    implementation("com.snowflake:snowpark_2.13:1.18.0") {
        exclude group: 'org.slf4j', module: 'slf4j-simple'
    }

    // ✅ AWS SDK v2 (BOM for version management)
    implementation platform('software.amazon.awssdk:bom:2.21.26')
    implementation 'software.amazon.awssdk:ec2'
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:lambda'
    implementation 'software.amazon.awssdk:sts'
    implementation 'software.amazon.awssdk:dynamodb'
    implementation 'software.amazon.awssdk:cloudwatch'
    implementation 'software.amazon.awssdk:rds'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    // Devtools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
